<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_200"
    tools:context=".REGISTRO">

    <LinearLayout
        android:layout_width="401dp"
        android:layout_height="476dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nombre"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/nombre"
            android:minHeight="48dp"

            android:textColor="@color/black"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/Edad"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:hint="@string/edad"

            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <Button
            android:id="@+id/Registrarse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Registrarse" />

        <Button
            android:id="@+id/eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eliminar_registro" />

        <Button
            android:id="@+id/actualizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actualizacion" />

        <Button
            android:id="@+id/leerb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leer_registros" />

        <TextView
            android:id="@+id/contenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Contenido" />

    </LinearLayout>
</RelativeLayout>